// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Bruk loading for knapper 1`] = `
<div style="<removed>">
  <button
    data-variant="primary"
    type="button"
  >
    Lagre
  </button>
  <button
    data-variant="secondary"
    type="button"
  >
    Avbryt
  </button>
</div>
`;

exports[`Fjern feltet 1`] = `
<ds-field>
  <label for="navn">
    Fullt navn
  </label>
  <div>
    <input
      id="navn"
      type="text"
    >
  </div>
</ds-field>
<fieldset aria-labelledby="<generated>">
  <legend id="<generated>">
    Skal du registrere en bedrift?
  </legend>
  <ds-field data-clickdelegatefor="<generated>">
    <input
      type="radio"
      value="nei"
      checked
      name="bedrift"
      id="<generated>"
    >
    <label
      data-weight="regular"
      for="<generated>"
    >
      Nei
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<generated>">
    <input
      type="radio"
      value="ja"
      name="bedrift"
      id="<generated>"
    >
    <label
      data-weight="regular"
      for="<generated>"
    >
      Ja
    </label>
  </ds-field>
</fieldset>
`;

exports[`Merk feltet med tekst 1`] = `
<fieldset aria-labelledby="<generated>">
  <legend id="<generated>">
    Velg hvilke informasjonskapsler du godtar
  </legend>
  <ds-field data-clickdelegatefor="<generated>">
    <input
      type="checkbox"
      checked
      id="<generated>"
    >
    <label
      data-weight="regular"
      for="<generated>"
    >
      Nødvendige (kan ikke velges bort)
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<generated>">
    <input
      type="checkbox"
      id="<generated>"
    >
    <label
      data-weight="regular"
      for="<generated>"
    >
      Funksjonelle
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<generated>">
    <input
      type="checkbox"
      id="<generated>"
    >
    <label
      data-weight="regular"
      for="<generated>"
    >
      Statistiske
    </label>
  </ds-field>
</fieldset>
`;

exports[`Vis feilmeldinger 1`] = `
<ds-field>
  <label for="navn-feil">
    Fullt navn
  </label>
  <div>
    <input
      id="navn-feil"
      type="text"
      value
    >
  </div>
</ds-field>
<ds-field>
  <label for="epost-feil">
    E-postadresse
  </label>
  <div>
    <input
      id="epost-feil"
      type="email"
      value
    >
  </div>
</ds-field>
<button
  data-variant="primary"
  type="button"
>
  Send inn
</button>
`;

exports[`Vis informasjon som ren tekst 1`] = `
<div>
  <h3 data-size="2xs">
    Organisasjonsnummer
  </h3>
  <p>
    123 456 789
  </p>
</div>
<div>
  <h3 data-size="2xs">
    E-postadresse
  </h3>
  <p>
    bruker@example.com
  </p>
</div>
<ds-field>
  <label for="telefon">
    Telefonnummer
  </label>
  <div>
    <input
      id="telefon"
      type="text"
    >
  </div>
</ds-field>
`;
